tests/func/grammar/test_meta_data_production_meta_data_must_be_key_value.err
2:70: syntax error: unexpected tokens NotComment(};), }
    2 |     MyRule: 'a' {left, 1, dynamic, nops, label:'My Label', not_allowed};
      |                                                                       ^^^ expected: :